# Pascal-S-Compiler

./: .gitignore  CMakeLists.txt  README.md  in.txt  main.cpp  main.txt
Batch Test/: B.plantuml  README.md  batch_test.py  batch_test.spec  fpc_path.txt  gcc_path.txt
Ccode/: forloopexample3.c  testprocandfunc.c  testrecord.c
include/: ASTError.h  ASTNode.h  CodeGeneration.h  TokenTypeEnum.h  ToolOfParseTree.h  id2id.h  main.h  yacc.tab.h
lex_yacc_src/: TokenTypeEnum.h  lex.l  lex.yy.c  main.cpp  main.h  test_main.cpp  yacc.tab.c  yacc.tab.h  yacc.y
normal_c_code/: 00_main.c  02_branch.c  06  06_global_arr_init.cpp  11_maximal_clique.c  11_maximal_clique.cpp  14_union_find.cpp  15_matrix_multiply.cpp  22_arr_expr_len.cpp  22_math.c  22_math.cpp  23_dct.c  23_dct.cpp  24_fp_params.c  46_full_conn.c  65_float.c
normal_set/: 07_BST.pas  15_matrix_multiply.pas  17_long_line.pas  18_many_indirections.pas  22_math.pas  24_fp_params.pas  27_op_priority5.pas  41_big_int_mul.pas  51_var_name.pas  60_many_locals.pas  64_nested_loops.pas
open_set/: 00_main.c  01_var_defn2.c  02_var_defn3.c  03_arr_defn2.c  04_const_var_defn2.c  06_func_defn.c  07_var_defn_func.c  08_add2.c  09_addc.c  10_sub2.c  11_subc.c  12_mul.c  13_mulc.c  15_divc.c  16_mod.c  17_rem.c  18_if_test3.c  22_arr_expr_len.c  23_op_priority1.c  24_op_priority2.c  25_op_priority3.c  30_logi_assign.c  31_comment1.c  33_if_complex_expr.c  34_short_circuit.c  37_sort_test1.c  38_sort_test4.c  41_big_int_mul.c  42_color  42_color.c  43_exgcd.c  44_reverse_output.c  47_hanoi.c  48_n_queens.c  52_chaos_token.c  (+12 more)
(+66 files in other folders)
